implementing ui
