# todolistfrontend/src/app/services/models/token.ts
@@ -1,13 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-import { Users } from '../models/users';
-export interface Token {
-  expired?: boolean;
-  id?: number;
-  revoked?: boolean;
-  token?: string;
-  tokenType?: 'BEARER';
-  user?: Users;
-}
